# Rare-bird-Alerts

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily_alert.yml
rare_bird_alerts/: discord_sender.py  ebird_client.py  email_sender.py  image_fetcher.py  main.py  models.py
tests/: conftest.py  test_discord_sender.py  test_ebird_client.py  test_email_sender.py  test_image_fetcher.py  test_main.py  test_models.py
